fix(header): letter spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 .content-section {
   font-weight: 400;
   /* fixme */
-  letter-spacing: -0.03px;
+  letter-spacing: -0.02px;
 }
 
 .header {
